--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "milligram": "^1.3.0",
     "yaml-front-matter": "^3.4.0",
     "zepto": "^1.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-uglify": "^2.0.1"
   }
 }
